# whar-arena

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: benchmark-missing.yml  deploy-pages.yml  validate-pr.yml
apps/web/: astro.config.mjs  package-lock.json  package.json
evaluation/: protocol.yaml
runs/all-models-actrectut-seed0/aroma_joint_model/: aroma_joint_model_actrectut_gestures_summary.json  split-01.json
runs/all-models-actrectut-seed0/attend_discriminate/: attend_discriminate_actrectut_gestures_summary.json  split-01.json
runs/all-models-actrectut-seed0/attensense/: attensense_actrectut_gestures_summary.json  split-01.json
runs/all-models-actrectut-seed0/cnn_har/: cnn_har_actrectut_gestures_summary.json  split-00.json  split-01.json
runs/all-models-actrectut-seed0/dana/: dana_actrectut_gestures_summary.json
runs/all-models-actrectut-seed0/deepconv_lstm/: deepconv_lstm_actrectut_gestures_summary.json  split-00.json
runs/all-models-actrectut-seed0/deepconv_lstm_attention/: deepconv_lstm_attention_actrectut_gestures_summary.json  split-01.json
runs/all-models-actrectut-seed0/deepconv_lstm_iswc/: deepconv_lstm_iswc_actrectut_gestures_summary.json
runs/all-models-actrectut-seed0/dynamic_whar/: dynamic_whar_actrectut_gestures_summary.json
runs/all-models-actrectut-seed0/global_fusion/: global_fusion_actrectut_gestures_summary.json  split-00.json  (+1 more)
schemas/: result.schema.json
src/whar_arena/: catalog.py  cli.py  paths.py  planner.py  protocol.py  results.py  site.py  training.py
tests/: test_planner.py
(+51 files in other folders)
