[project]
name = "whar-arena"
version = "0.1.0"
description = "Protocol-driven WHAR benchmark planner, result database, and static site generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.1",
    "pyyaml>=6.0.3",
    "whar-datasets",
    "whar-models",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
whar-arena = "whar_arena.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
whar-models = { git = "https://github.com/teco-kit//whar-models.git" }
whar-datasets = { git = "https://github.com/teco-kit//whar-datasets.git" }
